# ProgettoLabProg

./: CMakeLists.txt  Item.cpp  Item.h  ItemCategory.cpp  ItemCategory.h  Observer.cpp  Observer.h  ShoppingList.cpp  ShoppingList.h  Subject.cpp  Subject.h  User.cpp  User.h  UserInterface.cpp  UserInterface.h  UserManager.cpp  UserManager.h  Utility.cpp  Utility.h  main.cpp
tests/: CMakeLists.txt  test_Item.cpp  test_Observer.cpp  test_ShoppingList.cpp  test_User.cpp  test_main.cpp
